<resources>
    <string name="app_name">Apretaste</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="sex_array">
        <item>Sexo</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="orientac_sex_array">
        <item>Orientación Sexual</item>
        <item>Hetero</item>
        <item>Gay</item>
        <item>Bisexual</item>
    </string-array>
    <string-array name="type_body_array">
        <item>Tipo Cuerpo</item>
        <item>Delgado</item>
        <item>Media</item>
        <item>Extra</item>
        <item>Atlético</item>
    </string-array>
    <string-array name="eyes_array">
        <item>Color de Ojos</item>
        <item>Negros</item>
        <item>Carmelitas</item>
        <item>Verdes</item>
        <item>Azules</item>
        <item>Avellana</item>
        <item>Otro</item>
    </string-array>
    <string-array name="pelo_array">
        <item>Color de Pelo</item>
        <item>Trigueño</item>
        <item>Castaño</item>
        <item>Rubio</item>
        <item>Negro</item>
        <item>Rojo</item>
        <item>Blanco</item>
        <item>Otro</item>
    </string-array>
    <string-array name="piel_array">
        <item>Color de Piel</item>
        <item>Blanca</item>
        <item>Negra</item>
        <item>Mestiza</item>
        <item>Otro</item>
    </string-array>
    <string-array name="state_civil_array">
        <item>Estado civil</item>
        <item>Soltero</item>
        <item>Saliendo</item>
        <item>Compremetido</item>
        <item>Casado</item>
    </string-array>
    <string-array name="nivel_escolar_array">
        <item>Nivel Escolar</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Técnico</item>
        <item>Universitario</item>
        <item>Posgrado</item>
        <item>Doctorado</item>
        <item>Otro</item>
    </string-array>
    <string-array name="province_array">
        <item>Provincia</item>
        <item>Pinar del Río</item>
        <item>Artemisa</item>
        <item>La Habana</item>
        <item>Mayabeque</item>
        <item>Matanzas</item>
        <item>Las Villas</item>
        <item>Cienfuegos</item>
        <item>Santi Spíritus</item>
        <item>Ciego Avila</item>
        <item>Camagüey</item>
        <item>Las Tunas</item>
        <item>Holguín</item>
        <item>Granma</item>
        <item>Santiago</item>
        <item>Guantánamo</item>
        <item>Isla de la Juventud</item>
    </string-array>
    <string-array name="religion_array">
        <item>Religión</item>
        <item>Ateísmo</item>
        <item>Secularismo</item>
        <item>Agnosticismo</item>
        <item>Catolicismo</item>
        <item>Cristianismo</item>
        <item>Islam</item>
        <item>Raftafarismo</item>
        <item>Judaismo</item>
        <item>Espiritismo</item>
        <item>Sijismo</item>
        <item>Budismo</item>
        <item>Otra</item>
    </string-array>
    <string name="msg_login">Introduzaca su email y contraseña de Nauta</string>
    <string name="text_error">Error</string>
    <string name="no_connection_nauta">No hemos podido establecer comunicación.Asegúrese que sus datos son correctos e intente nuevamente</string>
    <string name="connection_success">Su cuenta ha sido configurada correctamente.Puede seguir usando Apretaste</string>
    <string name="loading_dates_profile">Estamos cargando su perfil.Este proceso debe tomar unos minutos.Por favor sea paciente y no cierre la aplicación</string>
    <string name="text_email">Email</string>
    <string name="text_password">Contraseña</string>
    <string name="profile_update_success">Su perfil se ha guardado correctamente</string>
    <string name="loading_services">Estamos buscando nuevos servicios , chats , notificaciones y cambios en su perfil.Por favor sea paciente y no cierre la aplicación</string>
    <string name="session_termiante">Si termina su sessión no recibirá mas notificaciones y otros usuarios no podrán contactarle</string>
    <string name="text_auto_sync">Auto Resfrescar</string>
    <string name="description_auto_sync">Mientras más bajo el tiempo de resfrescado , mas rápido le llegaran nuevos servicios y notificaciones. También tendrá que conectarse con el servidor mas seguido y le consumirá un poco mas de saldo</string>
    <string name="text_buzon_personal">Cambiar buzón personal</string>
    <string name="desc_buzon_personal">Si no logra conectar con Apretaste , puede que necesite cambiar su buzón personal</string>
    <string name="text_config_nauta">Configuración de Nauta</string>
    <string name="des_config_nauta">Configure su cuenta de Nauta para conectar con Apretaste</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_close">Cerrar</string>
    <string name="btn_acceder">Acceder</string>
    <string name="loading_information">Estamos cargando información, sea paciente y no cierre la aplicación</string>
    <string name="hint_et_buzon">Buzón Personal</string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_password">Contraseña</string>
    <string name="server_smtp">Servidor SMTP</string>
    <string name="server_imap">Servidor SMTP</string>
    <string name="puerto">Puerto</string>
    <string name="apretaste">Apretaste!</string>
    <string name="introduzca_su_email_y_contrase_a_de_nauta">Introduzca su email y contraseña de Nauta</string>
    <string name="email">Email</string>
    <string name="contras_a">Contraseña</string>
    <string name="servidor_smtp">Servidor SMTP</string>
    <string name="smtp_nauta_cu">smtp.nauta.cu</string>
    <string name="_25">25</string>
    <string name="sin_seguridad">Sin seguridad</string>
    <string name="imap_nauta_cu">imap.nauta.cu</string>
    <string name="_143">143</string>
    <string name="siguiente">Siguiente</string>
    <string name="no_hay_notificaciones_disponibles_intente_refrescar_la_aplicaci_n">No hay notificaciones disponibles, Intente refrescar la aplicación.</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_naciemiento">Fecha de naciemiento</string>
    <string name="sexo">Sexo</string>
    <string name="orientacion_sexual">Orientacion Sexual</string>
    <string name="celular">Celular</string>
    <string name="cuerpo">Cuerpo</string>
    <string name="ojos">Ojos</string>
    <string name="pelo">Pelo</string>
    <string name="piel">Piel</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="nivel_escolar">Nivel Escolar</string>
    <string name="profesion">Profesión</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="intereses">Intereses</string>
    <string name="religion">Religión</string>
    <string name="guardar">GUARDAR</string>
    <string name="no_hay_resultados_guardados_intente_acceder_a_un_servicio">No hay resultados guardados, Intente acceder a un servicio.</string>
    <string name="web">Web</string>
    <string name="esta_es_la_descripcion_del_servicio">Esta es la descripción del servicio</string>
    <string name="categor_a">Categoría</string>
    <string name="ltima_versi_n">Última versión</string>
    <string name="creador">Creador</string>
    <string name="salvar">Salvar</string>
    <string name="about">About</string>
    <string name="about_text">&lt;!DOCTYPE html>
&lt;html>
&lt;body style="text-align:justify">
&lt;p>Hola @%1$s,&lt;/p>
&lt;p>Gracias por usar Apretaste. Nuestra app es una colección de servicios gratuitos cuya meta es ofrecerle herramientas productivas, mantenerle más informado y entretenido. Esperamos que Apretaste sea de su agrado y esté a la altura de sus necesidades.&lt;/p>
&lt;p>Seguramente le surgirán dudas y sugerencias. Escríbanos al soporte y le responderemos en 72 horas. La gran mayoría de nuestras ideas vienen de usuarios como usted. Si tiene una buena idea, no dude en compartirla y nosotros la haremos realidad.&lt;/p>
&lt;p>La mayoría de nuestros servicios son creados por voluntarios que gustan de este proyecto y desean engrandecerlo. Si sabe PHP le invitamos a que ayude implementando servicios que pueden mejorar la vida de otros. Es bien sencillo, escríbanos al soporte si tiene interés.&lt;/p>
&lt;p>Esta app adquiere información personal para ofrecerle un mejor servicio, por ejemplo su localización y contraseña de Nauta. Esta información nunca será compartida con nuestros voluntarios, institución o estado alguno, y siempre se encriptará con los estándares más seguros del mercado. Si desea cerrar su cuenta, su información personal será eliminada.&lt;/p>
¡Gracias nuevamente por usar Apretaste!
&lt;/body>
&lt;/html>

</string>
    <string name="sobre_esta_app">Sobre esta app</string>
    <string name="tiempo_de_refrescar">Tiempo de refrescar</string>
    <string name="cerrar_session">Cerrar sessión</string>
    <string name="acci_n_realizada">Acción realizada.</string>
    <string name="ok">Ok</string>
    <string name="pizarra">Pizarra</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>