<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    style="@style/App"
    tools:context="com.example.apretaste.Settings.Settings_nauta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:paddingBottom="95dp"
        android:clipToPadding="false"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:text="@string/des_config_nauta"
                android:textColor="#444"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_et_email"
                android:id="@+id/et_settings_email"
                android:inputType="textEmailAddress"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_et_password"
                android:id="@+id/et_settings_password"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_smtp"
                android:id="@+id/et_settings_server_smtp"
                android:text="@string/smtp_nauta_cu"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/puerto"
                    android:id="@+id/et_settings_port_smtp"
                    android:text="@string/_25"
                    android:gravity="center_horizontal"
                    android:inputType="number"/>

                <com.example.apretaste.AssetDrawableCompatEditText
                    android:id="@+id/et_settings_security_smtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:drawableRightCompat="@drawable/ic_arrow_drop_down_black_24dp"
                    android:text="@string/sin_seguridad" />

            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_imap"
                android:id="@+id/et_settings_server_imap"
                android:text="@string/imap_nauta_cu"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="95dp">

                <EditText

                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/puerto"
                    android:id="@+id/et_settings_port_imap"
                    android:inputType="number"
                    android:text="@string/_143" />
                <com.example.apretaste.AssetDrawableCompatEditText
                    android:id="@+id/et_settings_security_imap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableRightCompat="@drawable/ic_arrow_drop_down_black_24dp"
                    android:text="@string/sin_seguridad"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>     <!--  style="@style/FabTheme"-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="8dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_save_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        tools:ignore="RtlHardcoded"
        android:onClick="open_activitys"
        />



</RelativeLayout>
