<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    style="@style/App"
    tools:context="apretaste.settings.Settings_nauta">

    <ScrollView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_et_email"


                android:id="@+id/et_settings_email"
                android:inputType="textEmailAddress"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_settings_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/contras_a"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_smtp"
                android:id="@+id/et_settings_server_smtp"
                android:text="@string/smtp_nauta_cu"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/puerto"
                    android:id="@+id/et_settings_port_smtp"
                    android:text="@string/_25"
                    android:gravity="center_horizontal"
                    android:inputType="number"/>

                <apretaste.Helper.AssetDrawableCompatEditText
                    android:id="@+id/et_settings_security_smtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    app:drawableRightCompat="@drawable/ic_arrow_drop_down_black_24dp"
                    android:text="@string/sin_seguridad" />

            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_imap"
                android:id="@+id/et_settings_server_imap"
                android:text="@string/imap_nauta_cu"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText

                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/puerto"
                    android:id="@+id/et_settings_port_imap"
                    android:inputType="number"
                    android:text="@string/_143" />

                <apretaste.Helper.AssetDrawableCompatEditText
                    android:id="@+id/et_settings_security_imap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableRightCompat="@drawable/ic_arrow_drop_down_black_24dp"
                    android:focusable="false"
                    android:text="@string/sin_seguridad"
                    android:layout_marginBottom="75dp"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_button"
        style="@style/FabTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="8dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_save_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        tools:ignore="RtlHardcoded"
        android:onClick="open_activitys"
        />


</RelativeLayout>
