<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"

    style="@style/App"
    tools:context="com.example.apretaste.com.apretaste.apretaste.LoginActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-35dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/logo"
                android:text="@string/apretaste"
                android:textColor="#000"
                android:textSize="50sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_b_http"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    app:srcCompat="@drawable/ic_arrow_left_black_24" />

                <Button
                    android:id="@+id/btn_n_http"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/siguiente" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
